tests/fail/union_partial_init.stderr
error[E0425]: Partial initialization of Union 'BadUnion': variant 'small' size 1 is smaller than Union size 8
 --> tests/fail/union_partial_init.tk:6:14
  |
 6 |     auto u = BadUnion(small = 1); // EXPECT: error[E0425]: Partial initialization of Union 'BadUnion'
  |              ^
